--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  text-rendering: auto;
+  text-rendering: optimizeSpeed;
+  text-rendering: optimizeLegibility;
+  text-rendering: geometricPrecision;
+  leading-trim: both;
+  text-edge: cap;
+  }
+
+@font-face {
+    font-family: "Moderat-Regular";
+    src:
+      url("./assets/fonts/Moderat-Regular.otf") format("opentype"),
+  }
+
+  
+@font-face {
+    font-family: "Moderat-Medium";
+    src:
+      url("./assets/fonts/Moderat-Medium.otf") format("opentype"),
+  }
+
