--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,7 @@ body {
   backdrop-filter: blur(100px);
 }
 
+.about-team-section {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
