--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ body {
   backdrop-filter: blur(100px);
 }
 
-.about-team-section {
+.fade-in-section {
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
