--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@ body {
 .selected-projects-image-blur {
   background: rgba(255, 255, 255, 0.20);
   transition: all 0.25s ease-in-out;
+  transition-delay: 100ms;
   opacity:0
 }
 
@@ -27,6 +28,7 @@ body {
 
 .fade-in-section {
   transition: background-color 0.3s ease, color 0.3s ease;
+  transition-delay: 100ms;
 }
 
 
@@ -42,7 +44,7 @@ body {
 
 @media (max-width: 768px) {
   .footer-container {
-    height: calc(100vh - 300px)
+    height: 100vh
   }
 }
 
